testCases/semanticAnalyzerTestCases/error/functionReturnAssignment.cs16
/*

    Author: Chris Kaebe
    Date: March 4, 2016
*/

int x;
bool isWoman,isMan;

int isAWigger(bool isWhite, bool isGangster){
    if( isWhite && isGangster)
        return 1;
    return 0;
}

bool isFat(bool isWoman){
    int height;

    {
        bool isPregnant;
        int age;

        if( isWoman )
            return true;
        else
            return false;
    }
}

void foo(void){
;
}
int main(bool isWoman){
    int wiggerness;
    bool isAFatty;

    isFat(isWoman); --should be assigned
    foo(); --should not assigned
    wiggerness := foo(); --should not assigned to int
    isAFatty := foo(); --should not assigned to bool

    wiggerness := isAWigger(true, true);

    return wiggerness;
}

